# svg-suite

./: INSTALL.md  LICENSE  README.md  SVGArtGrid.md  SVGArtGrid.py  SVGArtGridDimensionsCalculator.py  SVGArtGridV2.py  SVGArtGridV3.py  SVGArtGridV4.py  SVGCompression.py  SVGStyler.py  SVGXMLParser.py  SVG_StringEdit.py  SVGreColor.py  SVGreColorV2.py  ZenkaiSVG_V1.py  __init__.py  artgrid_logic.md  pyproject.toml  requirements.txt  svg_Advanced.py
.github/workflows/: publish.yml
colors/: gash.json  green-purple.json  triadic-french.json  warm-purples.json
examples/: Foda-img2img-SVGARTGRID-Lines-GGUF-v320.json  Foda-img2img-SVGARTGRID-Lines-GGUF-v340.json  SVG-ART-grid-ADVloop-60FPS-v25.json  SVG-ART-grid-ADVloop2-UP60FPS-v50.json  SVG-ART-grid-ADVloop2-UP60FPS-v60.json  SVG-ART-grid-REMBG-Blending-v30.json  SVG-ART-grid-basicloop-v20.json  SVG-ART-grid-sideways-v16.json  SVG-ART-grid-v12.json  SVG-Suite-v20.json
styles/: README.md  blueprint.json  colorful_flat.json  minimalist.json  my_custom_style.json  neon_glow.json  watercolor.json
themes/: README.md  monochrome_theme.json  nature_theme.json  pastel_theme.json  vibrant_theme.json
